<resources>
    <!-- App Strings -->
    <string name="app_name">Expensa</string>
    <string name="welcome_expensa">Welcome to Expensa</string>
    <string name="app_desc">A minimal Account Manager</string>

    <string name="empty_text_home">Accounts you add appear here</string>
    <string name="empty_text_archive">Your archived accounts appear here</string>
    <string name="empty_text_trash">No accounts in Recycle Bin!</string>
    <string name="empty_text_credit">No accounts with credit!</string>
    <string name="empty_text_debit">No accounts with debit!</string>

    <!-- Actions & Buttons -->
    <string name="action_help">Help</string>
    <string name="button_google_plus">Google+</string>
    <string name="button_skip">Skip</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="choose_avatar">Choose an Avatar</string>
    <string name="strDelete">Delete</string>
    <string name="strEdit">Edit</string>
    <string name="strArchive">Archive</string>
    <string name="strUnarchive">Unarchive</string>
    <string name="strRestore">Restore</string>
    <string name="strDeleteForever">Delete Forever</string>
    <string name="action_add_transaction">Add Transaction</string>
    <string name="action_update">Update</string>

    <!-- Navigation Drawer -->
    <string name="nav_home">Home</string>
    <string name="nav_archive">Archive</string>
    <string name="nav_trash">Deleted</string>
    <string name="nav_credit">Credit</string>
    <string name="nav_debit">Debit</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help_feedback"><![CDATA[Help & Feedback]]></string>

    <!-- Activity Title -->
    <string name="title_activity_main_account">Accounts</string>
    <string name="title_activity_main_archive">Archive</string>
    <string name="title_activity_main_deleted">Deleted</string>

    <string name="title_activity_add_account">Add Account</string>
    <string name="title_activity_edit_account">Edit Account</string>
    <string name="title_activity_account_detail">Account Detail</string>
    <string name="title_activity_add_transaction">Add Transaction</string>
    <string name="title_activity_edit_transaction">Edit Transaction</string>

    <!-- Misc -->
    <string name="account_title">Account Title</string>
    <string name="trans_title">Title</string>
    <string name="trans_amount">Amount</string>
    <string name="spinner_title">Choose Date</string>
    <string name="transaction_edit_dialog_title">Transaction</string>

    <integer name="activity_anim_duration">250</integer>
    <string name="title_activity_test">TestActivity</string>

    <string name="hello_world">Hello world!</string>
</resources>
