<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1">
        <item
            android:id="@+id/nav_home"
            android:checkable="true"
            android:checked="true"
            android:icon="@drawable/ic_home_grey"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_archives"
            android:checkable="true"
            android:icon="@drawable/ic_archive_grey"
            android:title="@string/nav_archive" />
        <item
            android:id="@+id/nav_trash"
            android:checkable="true"
            android:icon="@drawable/ic_delete_grey"
            android:title="@string/nav_trash" />

    </group>

    <group android:id="@+id/grp2">
        <item
            android:id="@+id/nav_credit"
            android:checkable="true"
            android:icon="@drawable/ic_arrow_up_bold"
            android:title="@string/nav_credit" />
        <item
            android:id="@+id/nav_debit"
            android:checkable="true"
            android:icon="@drawable/ic_arrow_down_bold"
            android:title="@string/nav_debit" />

    </group>

    <group
        android:id="@+id/grp3"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:checkable="false"
            android:icon="@drawable/ic_settings_grey"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_help"
            android:checkable="false"
            android:icon="@drawable/ic_help_grey600"
            android:title="@string/nav_help_feedback" />

    </group>

</menu>
