<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_remover"
        android:icon="@drawable/ic_delete_white"
        android:orderInCategory="300"
        app:showAsAction="always|ifRoom"
        android:title="@string/strDelete"/>

    <item
        android:id="@+id/action_acrhive"
        android:icon="@drawable/ic_archive_white"
        android:orderInCategory="200"
        app:showAsAction="always|ifRoom"
        android:title="@string/strArchive"/>

    <item
        android:id="@+id/action_editor"
        android:icon="@drawable/ic_edit_white"
        android:orderInCategory="100"
        app:showAsAction="always|ifRoom"
        android:title="@string/strEdit"/>

</menu>